# FingerLikeR

./: LICENSE  README.md  index.html  latest.json  mise.toml  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: index.css  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/application/: commands.rs  state.rs
src-tauri/src/bootstrap/: commands.rs
src-tauri/src/core/: mod.rs  mouse.rs  scheduler.rs  state.rs  store.rs
src-tauri/src/core/models/: task.rs
src-tauri/src/core/mouse/: mod.rs  mouse_click.rs  mouse_move.rs
src-tauri/src/core/mouse/model/: mod.rs
src-tauri/src/domain/models/: click_params.rs  mod.rs
src-tauri/src/infra/: accessibility.rs  mod.rs  store.rs
src-tauri/src/infrastructure/: mod.rs  mouse.rs
src-tauri/src/module/: mod.rs
src-tauri/src/module/scheduler/: scheduler.rs
src-tauri/src/module/shortcut/: mod.rs  shortcut_handler.rs  shortcut_registry.rs
src-tauri/src/module/trayicon/: mod.rs  trayicon.rs
src-tauri/src/shared/: app_handle.rs  app_state.rs  mod.rs
src/lib/: updater.ts
src/router/: index.ts
src/store/: store.ts  task.ts
src/views/: index.vue
src/views/about/: about.vue
src/views/clickMode/: clickMode.vue
src/views/mainPanel/: TaskProgress.vue  mainPanel.vue
