[package]
name = "fingerliker"
version = "0.1.0"
description = "仿生鼠标连点器"
authors = ["shichen437"]
edition = "2021"

[lib]
name = "fingerliker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tokio = { version = "1", features = ["time"] }
enigo = "0.6.1"
once_cell = "1.21.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
ts-rs = "8.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
